fix(website): remove gap in badge css

--- a/website/app/components/preview/Tabs.module.css
+++ b/website/app/components/preview/Tabs.module.css
@@ -1,7 +1,6 @@
 /* Tabs */
 .badge {
 	padding: rem(4px) rem(8px);
-	gap: rem(10px);
 
 	border-radius: rem(4px);
 	font-family: var(--mantine-font-family-monospace);
